--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,11 @@
       <div class="container">
         <form class="search-form">
           <input class="search-input" type="text" name="user_query" required />
-          <button class="search-btn" type="submit">пошук</button>
+          <button class="search-btn" type="submit">Search</button>
         </form>
-        <div class="loader"></div>
         <ul class="gallery"></ul>
+        <button class="load-more is-hidden" type="button">Load more</button>
+        <div class="loader"></div>
       </div>
     </section>
     <script type="module" src="./main.js"></script>
